fix sistemato lo scroll con overflow

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 
 .main-window {
   width: 80%;
-  height: 90vh;
+  height: 80vh;
   margin: 0 auto;
   display: flex;
   justify-content: center;
